feat: get Porsche Design System up & running in Vite setup | sas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Patterns – Porsche Design System</title>
+    <!-- tricks the PDS initial styles validation, needs to be implemented properly asap -->
+    <style data-pds-initial-styles></style>
   </head>
   <body>
     <div id="app"></div>
