--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <base href="https://porsche-design-system.github.io/patterns/assets/"/>
   <title>Shop Landing Page – Patterns (Porsche Design System)</title>
 </head>
 <body>
