--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -7,7 +7,19 @@
 </head>
 <body>
 <div id="app">
-  <header class="header"></header>
+  <header class="header">
+    <div class="header__part header__part--start">
+      <p-button-pure class="header__button" theme="dark" icon="menu-lines" hide-label="{base: true, xs: false}">Menu</p-button-pure>
+      <p-button-pure class="header__button" theme="dark" icon="search" hide-label="true">Search</p-button-pure>
+    </div>
+    <p-wordmark class="header__wordmark" href="/" theme="dark"></p-wordmark>
+    <p-crest class="header__crest" href="/"></p-crest>
+    <div class="header__part header__part--end">
+      <p-link-pure href="/" class="header__link" theme="dark" icon="user" hide-label="true">Account</p-link-pure>
+      <p-link-pure href="/" class="header__link header__link--favorites" theme="dark" icon="heart" hide-label="true">Favorites</p-link-pure>
+      <p-link-pure href="/" class="header__link" theme="dark" icon="shopping-cart" hide-label="true">Shopping cart</p-link-pure>
+    </div>
+  </header>
   <main>
     <section class="teaser">
       <div class="teaser__media">
