chore: update naming of workflow | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="header__categories">
       <p-tabs-bar theme="dark">
-        <a href="/">Women</a>
+        <a href="/">Woman</a>
         <a href="/">Men</a>
         <a href="/">Accessories</a>
         <a href="/">Model Cars</a>
