chore: add caching of node_modules in CI | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -25,12 +25,12 @@
     </div>
     <div class="header__categories">
       <p-tabs-bar theme="dark">
-        <a href="/">Woman</a>
-        <a href="/">Men</a>
-        <a href="/">Accessories</a>
-        <a href="/">Model Cars</a>
-        <a href="/">Porsche Originals</a>
-        <a href="/">Porsche Design</a>
+        <button>Women</button>
+        <button>Men</button>
+        <button>Accessories</button>
+        <button>Model Cars</button>
+        <button>Porsche Originals</button>
+        <button>Porsche Design</button>
       </p-tabs-bar>
     </div>
   </header>
