feat: product list basics

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -7,17 +7,43 @@
 </head>
 <body>
 <div id="app">
-  <header class="header"></header>
+  <header class="header">
+    <div class="header__part header__part--start">
+      <p-button-pure class="header__button" icon="menu-lines" hide-label="{base: true, xs: false}" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Main navigation menu' }">Menu
+      </p-button-pure>
+      <p-button-pure class="header__button" icon="search" hide-label="true">Search</p-button-pure>
+    </div>
+    <p-wordmark class="header__wordmark" href="/"></p-wordmark>
+    <p-crest class="header__crest" href="/"></p-crest>
+    <div class="header__part header__part--end">
+      <p-link-pure href="/" class="header__link" icon="user" hide-label="true">Account</p-link-pure>
+      <p-link-pure href="/" class="header__link header__link--favorites" icon="heart" hide-label="true">
+        Favorites
+      </p-link-pure>
+      <p-link-pure href="/" class="header__link" icon="shopping-cart" hide-label="true">Shopping cart
+      </p-link-pure>
+    </div>
+    <nav class="header__categories" aria-label="Category Navigation">
+      <p-tabs-bar>
+        <a href="#">Women</a>
+        <a href="#">Men</a>
+        <a href="#">Accessories</a>
+        <a href="#">Model Cars</a>
+        <a href="#">Porsche Originals</a>
+        <a href="#">Porsche Design</a>
+      </p-tabs-bar>
+    </nav>
+  </header>
   <main>
-    <section class="content-navigation">
-      <nav class="breadcrumb" aria-label="Breadcrumb navigation">
-        <ol>
-          <li><p-link-pure href="/" size="x-small" underline="true" icon="none">Home</p-link-pure></li>
-          <li class="breadcrumb__divider" aria-hidden="true">/</li>
-          <li><p-link-pure href="./" size="x-small" icon="none" aria="{ 'aria-current': 'page' }" class="breadcrumb--current">Woman</p-link-pure></li>
-        </ol>
-      </nav>
-    </section>
+<!--    <section class="content-navigation">-->
+<!--      <nav class="breadcrumb" aria-label="Breadcrumb navigation">-->
+<!--        <ol>-->
+<!--          <li><p-link-pure href="/" size="x-small" underline="true" icon="none">Home</p-link-pure></li>-->
+<!--          <li class="breadcrumb__divider" aria-hidden="true">/</li>-->
+<!--          <li><p-link-pure href="./" size="x-small" icon="none" aria="{ 'aria-current': 'page' }" class="breadcrumb&#45;&#45;current">Woman</p-link-pure></li>-->
+<!--        </ol>-->
+<!--      </nav>-->
+<!--    </section>-->
     <section class="teaser">
       <div class="teaser__media">
         <picture>
@@ -27,31 +53,8 @@
         </picture>
       </div>
       <div class="teaser__header">
-        <p-display theme="dark" align="center" size="small" tag="h1">Made by Dreamers,<br>for Dreamers</p-display>
-        <p-link href="/" theme="dark" variant="secondary">Shop Collection</p-link>
-      </div>
-      <div class="teaser__content">
-        <p-link-tile
-          href="/"
-          label="Shop Collection"
-          description="Iconic Racing Design Taken To Perfection"
-          aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
-          weight="regular"
-        >
-          <img srcset="assets/martini-teaser@2x.webp 2x" src="assets/martini-teaser.webp" width="1308"
-               height="736" alt="Some alternative text for screen readers describing the image"/>
-        </p-link-tile>
-        <p-link-tile
-          href="/"
-          label="Shop Collection"
-          description="Transformers: Rise Of The Beasts X Porsche"
-          aspect-ratio="{base: '1:1', xs: '4:3', s: '16:9'}"
-          weight="regular"
-        >
-          <img srcset="assets/transformers-teaser@2x.webp 2x" src="assets/transformers-teaser.webp"
-               width="1308" height="736"
-               alt="Some alternative text for screen readers describing the image"/>
-        </p-link-tile>
+        <p-display theme="dark" align="center" size="small" tag="h1">Woman</p-display>
+        <p-link-pure href="/" theme="dark" variant="secondary">See Products</p-link-pure>
       </div>
     </section>
   </main>
