feat: add meta description | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shop Landing Page – Patterns (Porsche Design System)</title>
+  <meta name="description" content="Porsche Shop – Made by Dreamers, for Dreamers."/>
+  <title>Porsche Shop (Pattern)</title>
 </head>
 <body>
 <div id="app">
