feat: add content security policy | sas

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -25,14 +25,12 @@
       </p-link-pure>
     </div>
     <div class="header__categories">
-      <p-tabs-bar theme="dark">
-        <button>Women</button>
-        <button>Men</button>
-        <button>Accessories</button>
-        <button>Model Cars</button>
-        <button>Porsche Originals</button>
-        <button>Porsche Design</button>
-      </p-tabs-bar>
+      <p-button-pure theme="dark" icon="none">Women</p-button-pure>
+      <p-button-pure theme="dark" icon="none">Men</p-button-pure>
+      <p-button-pure theme="dark" icon="none">Accessories</p-button-pure>
+      <p-button-pure theme="dark" icon="none">Model Cars</p-button-pure>
+      <p-button-pure theme="dark" icon="none">Porsche Originals</p-button-pure>
+      <p-button-pure theme="dark" icon="none">Porsche Design</p-button-pure>
     </div>
   </header>
   <main>
