feat: minor html improvements

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -10,9 +10,9 @@
 <div id="app">
   <header class="header">
     <div class="header__part header__part--start">
-      <p-button-pure class="header__button" theme="dark" icon="menu-lines" hide-label="{base: true, xs: false}" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Main navigation menu' }">Menu
+      <p-button-pure class="header__button" theme="dark" icon="menu-lines" hide-label="{base: true, xs: false}" type="button" aria="{ 'aria-haspopup': 'dialog', 'aria-label': 'Main navigation menu' }">Menu
       </p-button-pure>
-      <p-button-pure class="header__button" theme="dark" icon="search" hide-label="true">Search</p-button-pure>
+      <p-button-pure class="header__button" theme="dark" icon="search" hide-label="true" type="button">Search</p-button-pure>
     </div>
     <p-wordmark class="header__wordmark" href="/" theme="dark"></p-wordmark>
     <p-crest class="header__crest" href="/"></p-crest>
