feat: add product items

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           <p-text-list-item>
             <a href="patterns/shop-landing-page/">Shop Landing Page</a>
           </p-text-list-item>
+          <p-text-list-item>
+            <a href="patterns/shop-product-list/">Shop Product List</a>
+          </p-text-list-item>
         </p-text-list>
       </div>
     </div>
