--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -58,7 +58,7 @@
       </div>
     </section>
     <section class="product-list">
-      <div class="product-list__settings">
+      <div class="product-list__sort">
         <p-select-wrapper>
           <select name="sort">
             <option value="">New Items</option>
@@ -66,10 +66,21 @@
             <option value="">Price down</option>
           </select>
         </p-select-wrapper>
-        <div class="product-list__filter">
-          <p-button-pure icon="none" type="button">Remove All</p-button-pure>
-          <p-button variant="secondary" type="button" icon="filter">Filter (3)</p-button>
-        </div>
+      </div>
+      <div class="product-list__filter">
+        <p-button-pure icon="none" type="button">Remove All</p-button-pure>
+        <p-button variant="secondary" type="button" icon="filter">Filter (3)</p-button>
+      </div>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <article class="product-list__item"></article>
+      <div class="product-list__footer">
+        <p-text>Viewing 1 - 50 of 400</p-text>
+        <p-button icon="none" type="button">Show 50 more results</p-button>
       </div>
     </section>
   </main>
