feat: minor HTML improvements

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -24,14 +24,14 @@
       <p-link-pure href="/" class="header__link" theme="dark" icon="shopping-cart" hide-label="true">Shopping cart
       </p-link-pure>
     </div>
-    <div class="header__categories">
-      <p-button-pure theme="dark" icon="none">Women</p-button-pure>
-      <p-button-pure theme="dark" icon="none">Men</p-button-pure>
-      <p-button-pure theme="dark" icon="none">Accessories</p-button-pure>
-      <p-button-pure theme="dark" icon="none">Model Cars</p-button-pure>
-      <p-button-pure theme="dark" icon="none">Porsche Originals</p-button-pure>
-      <p-button-pure theme="dark" icon="none">Porsche Design</p-button-pure>
-    </div>
+    <nav class="header__categories" aria-label="Category Navigation">
+      <p-link-pure href="#" theme="dark" icon="none">Women</p-link-pure>
+      <p-link-pure href="#" theme="dark" icon="none">Men</p-link-pure>
+      <p-link-pure href="#" theme="dark" icon="none">Accessories</p-link-pure>
+      <p-link-pure href="#" theme="dark" icon="none">Model Cars</p-link-pure>
+      <p-link-pure href="#" theme="dark" icon="none">Porsche Originals</p-link-pure>
+      <p-link-pure href="#" theme="dark" icon="none">Porsche Design</p-link-pure>
+    </nav>
   </header>
   <main>
     <section class="teaser">
