--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -24,14 +24,12 @@
       </p-link-pure>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
-      <p-tabs-bar>
-        <a href="#">Women</a>
-        <a href="#">Men</a>
-        <a href="#">Accessories</a>
-        <a href="#">Model Cars</a>
-        <a href="#">Porsche Originals</a>
-        <a href="#">Porsche Design</a>
-      </p-tabs-bar>
+      <p-link-pure href="#" icon="none" aria="{ 'aria-current': 'page' }">Women</p-link-pure>
+      <p-link-pure href="#" icon="none">Men</p-link-pure>
+      <p-link-pure href="#" icon="none">Accessories</p-link-pure>
+      <p-link-pure href="#" icon="none">Model Cars</p-link-pure>
+      <p-link-pure href="#" icon="none">Porsche Originals</p-link-pure>
+      <p-link-pure href="#" icon="none">Porsche Design</p-link-pure>
     </nav>
   </header>
   <main>
