feat: product list - minor adaptions

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -24,7 +24,7 @@
       </p-link-pure>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
-      <p-link-pure href="#" icon="none" aria="{ 'aria-current': 'page' }">Women</p-link-pure>
+      <p-link-pure href="#" icon="none" active="true" aria="{ 'aria-current': 'page' }">Women</p-link-pure>
       <p-link-pure href="#" icon="none">Men</p-link-pure>
       <p-link-pure href="#" icon="none">Accessories</p-link-pure>
       <p-link-pure href="#" icon="none">Model Cars</p-link-pure>
@@ -52,7 +52,7 @@
       </div>
       <div class="teaser__header">
         <p-display theme="dark" align="center" size="small" tag="h1">Woman</p-display>
-        <p-link-pure href="/" theme="dark" variant="secondary">See Products</p-link-pure>
+        <p-link-pure href="/" theme="dark" icon="none" underline="true" variant="secondary">See Products</p-link-pure>
       </div>
     </section>
     <section class="product-list">
